--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .DS_Store
+.vscode/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+classifiers/*.pickle
 
 # C extensions
 *.so
